--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>About</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Edwin Sunny</h1>
